--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,17 +11,20 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # Ícones adicionais (DNA, etc.)
-  font_awesome_flutter: ^10.7.0
+  # Firebase
+  firebase_core: ^4.2.0
+  cloud_firestore: ^6.0.3
 
-  # Ícones padrão iOS
+  # Ícones
+  font_awesome_flutter: ^10.7.0
   cupertino_icons: ^1.0.8
+  file_picker: ^10.3.3
+  firebase_storage: ^13.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  
 
 flutter:
   uses-material-design: true
